# ddpa_layout

./: README.diplomatics.md  README.md  pyproject.toml  requirements.txt  seal_ds.yaml  setup.py
ddp_layout/: config.py  config_legacy.py  layout_index.py  layout_service.py  scoped_config.py  scoped_layout_service.py
ddp_layout/legacy/: detect.py  export.py  hubconf.py  train.py  val.py
ddp_layout/models/: common.py  experimental.py  tf.py  yolo.py
ddp_layout/runs/train/1K_2026/: events.out.tfevents.1778670591.radagast.662764.0  opt.yaml
ddp_layout/runs/train/1K_20262/: events.out.tfevents.1778672060.radagast.666560.0  opt.yaml
ddp_layout/runs/train/1K_20263/: events.out.tfevents.1778673399.radagast.670159.0  opt.yaml
ddp_layout/runs/train/1K_20264/: events.out.tfevents.1778673501.radagast.670379.0  opt.yaml
ddp_layout/scripts/: ddp_layout_offline.py  ddp_layout_online.py  ddp_layout_online_legacy.py  ddp_layout_train.py  ddp_scoped_layout_online.py
ddp_layout/templates/: charter.html  fond.html  fsdb.html  info.html  layout_charter_legacy.html  layout_classes.html  layout_classitems_legacy.html  layout_object.html  object.html  object_list_thumbnailed.html  sly_classes.html  sly_classitems.html
ddp_layout/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  datasets.py  downloads.py  general.py  loss.py  plots.py  torch_utils.py
ddp_layout/utils/loggers/: __init__.py
ddp_layout/utils/loggers/wandb/: log_dataset.py  sweep.py  wandb_utils.py
doc/: SAB_README.md
legacy/: train.py
models/: experimental.py
templates/: archive.html  charter_simple.html  classes.html  object.html  object_list.html  object_list_thumbnailed.html
test/layout/: test_layout_index.py
utils/: augmentations.py  datasets.py  general.py  loss.py  plots.py
